--- a/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab.xml
+++ b/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab.xml
@@ -200,6 +200,15 @@
 		<text name="SiteReadinessTime">Site Readiness Time</text>
 		<text name="Hours">Hours</text>
 		<text name="Min">Minutes</text>
+		<text name="ApprovedByConsultantRevstion">Revised</text>
+		<text name="ApprovedBySupervising">Approved</text>
+		<text name="ApprovedByLabProjectManager">Confirmed to Regiseter</text>
+		<text name="ProjectRegister">Project Register</text>
+		<text name="TotalContractors">Contractors</text>
+		<text name="ActivatedProjects">Activated Projects</text>
+		<text name="ProjectsUnderReview">Projects Under Review</text>
+		<text name="TotalPendingRequests">Pending Requests</text>
+		<text name="FinishedRequests">Completed Requests</text>
 		
 </texts>
 </localizationDictionary>
