--- a/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab.xml
+++ b/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab.xml
@@ -218,5 +218,6 @@
 		<text name="StartDateRequired">Start Date Required</text>
 		<text name="CompletedDateRequired">Completed Date Required</text>
 		<text name="SiteDelivedDateRequired">Site Delived Date Required</text>
+		<text name="Observer">Observer</text>
 </texts>
 </localizationDictionary>
