--- a/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab.xml
+++ b/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab.xml
@@ -191,6 +191,7 @@
 		<text name="DuplicateProjectItem">DuplicateProjectItem</text>
 		<text name="ProjectItems">Project Items</text>
 		<text name="Departments">Departments</text>
+		<text name="DepartmentsMenu">Departments Menu</text>
 		<text name="RelatedAgency">Related Agency</text>
 		<text name="ActionName">Action Name</text>
 		<text name="ActionNote">Action Note</text>
@@ -219,8 +220,11 @@
 		<text name="CompletedDateRequired">Completed Date Required</text>
 		<text name="SiteDelivedDateRequired">Site Delived Date Required</text>
 		<text name="Observer">Observer</text>
+		<text name="Observers">Observers</text>
+		<text name="ObserversMenu">Observers Menu</text>
 		<text name="TownShip">TownShip</text>
 		<text name="TownShips">TownShips</text>
+		<text name="TownShipsMenu">TownShips Menu</text>
 		<text name="Address">Address</text>
 </texts>
 </localizationDictionary>
