- Add Select Form

--- a/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab-ar.xml
+++ b/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab-ar.xml
@@ -242,6 +242,11 @@
 		<text name="Tests">الإختبارات</text>
 		<text name="NoTestAvailable">لا يوجد أختبار متاح</text>
 		<text name="HaveResult">تم إدخال نتائج</text>
+		<text name="samplePreparationDate">تاريخ إعداد العينه</text>
+		<text name="samplePreparationEndDate">تاريخ نهايه العينه</text>
+		<text name="TestsResult">إدخال نتيجه الإختبار</text>
+		<text name="AssignTest">تحديد نوع شاشة الادخال</text>
+		<text name="TestForm">نوع نوع شاشة الادخال</text>
 		<!--<text name="ApprovedByLabProjectManager">مدير المختبر إعتمد الطلب </text>-->
 	</texts>
 </localizationDictionary>
