--- a/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab.xml
+++ b/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab.xml
@@ -243,5 +243,7 @@
 		<text name="AssignTest">Assign Test</text>
 		<text name="TestForm">Test Form</text>
 		<text name="TestSetting">Test Setting</text>
+		<text name="Map">Map</text>
+		<text name="PleaseSelectProjectLocation">Please Select Project Location</text>
 </texts>
 </localizationDictionary>
