- Add Location Tab

--- a/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab-ar.xml
+++ b/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab-ar.xml
@@ -250,6 +250,7 @@
 		<text name="TestSetting">إعدادات الإختبارات</text>
 		<text name="Map">الخريطه</text>
 		<text name="PleaseSelectProjectLocation">يجب إختيار موقع المشروع</text>
+		<text name="ProjectLocation">موقع المشروع</text>
 		<!--<text name="ApprovedByLabProjectManager">مدير المختبر إعتمد الطلب </text>-->
 	</texts>
 </localizationDictionary>
