--- a/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab-ar.xml
+++ b/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab-ar.xml
@@ -251,6 +251,7 @@
 		<text name="Map">الخريطه</text>
 		<text name="PleaseSelectProjectLocation">يجب إختيار موقع المشروع</text>
 		<text name="ProjectLocation">موقع المشروع</text>
+		<text name="ContractorName">المقاول</text>
 		<!--<text name="ApprovedByLabProjectManager">مدير المختبر إعتمد الطلب </text>-->
 	</texts>
 </localizationDictionary>
